--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "library-practice",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://mark-ua-top.github.io/library-practice/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx parcel src/index.html",
@@ -18,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/MarkUA-top/library-practice/issues"
   },
-  "homepage": "https://github.com/MarkUA-top/library-practice#readme",
+  "homepage": "https://github.com/mark-ua-top/library-practice",
   "dependencies": {
     "gh-pages": "^6.3.0",
     "parcel": "^2.14.4"
