--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "library-practice",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://mark-ua-top.github.io/library-practice/",
+  "dependencies": {
+    "gh-pages": "^6.3.0",
+    "parcel": "^2.14.4",
+    "parcel-reporter-clean-dist": "^1.0.4",
+    "posthtml-include": "^2.0.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx parcel src/index.html",
@@ -14,15 +19,10 @@
     "type": "git",
     "url": "git+https://github.com/mark-ua-top/library-practice.git"
   },
-  "author": "",
+  "author": "mark-ua-top",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mark-ua-top/library-practice/issues"
   },
-  "dependencies": {
-    "gh-pages": "^6.3.0",
-    "parcel": "^2.14.4",
-    "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^2.0.1"
-  }
+  "homepage": "https://github.com/mark-ua-top/library-practice#readme"
 }
