--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
   "bugs": {
     "url": "https://github.com/mark-ua-top/library-practice/issues"
   },
-  "homepage": "https://github.com/mark-ua-top/library-practice#readme"
+  "homepage": "https://mark-ua-top.github.io/library-practice/"
 }
