--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "dependencies": {
     "gh-pages": "^6.3.0",
+    "handlebars": "^4.7.8",
     "parcel": "^2.14.4",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^2.0.1"
